# traceblade

./: .gitignore  LICENSE  Logic.hs  Match.hs  MatchEval.hs  MatchFunctions.hs  MatchUtil.hs  ParserUtils.hs  RuleParser.hs  Rules.hs  SCParser.hs  Syscall.hs  TraceBlade.hs  Util.hs  traceblade.cabal  traceblade.hs
